[package]
name = "user-management"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4" }
actix-settings = { version = "0.6.0" }
tera = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
env_logger = { version = "0.9.1" }
uuid = { version = "1", features = ["v4"] }
ahash = { version="0.8.0" }
chrono = { version = "0.4.22" }
cqrs-es = { version = "0.4.5" }
postgres-es = { version = "0.4.5" }
async-trait = { version = "0.1" }
sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "postgres", "uuid", "chrono", "json" ] }
tokio = { version = "1.21.2", features = ["default", "sync"] }
